--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,8 +15,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "helmet": "^8.1.0",
     "multer": "^1.4.5-lts.1",
+    "node": "^20.19.0",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.89.0",
     "stripe": "^17.4.0",
     "uuid": "^11.0.3"
   }
