--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.1",
+    "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "mongoose": "^8.15.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "node": "^20.19.0",
     "node-fetch": "^3.3.2",
     "openai": "^4.89.0",
-    "stripe": "^17.4.0",
-    "uuid": "^11.0.3"
+    "path": "^0.12.7",
+    "stripe": "^17.7.0",
+    "uuid": "^11.1.0"
   }
 }
